<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".TransactionDetailsActivity">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="323dp"
        android:layout_height="50dp"
        android:text="DETAILS DES TRANSACTION"
        android:textColor="#090000"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="78dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="397dp"
        android:layout_height="440dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        android:paddingTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/compte"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/compte"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="125522"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/date"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="1422"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/ref"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reference"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="12255"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/solde"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/solde"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="1222"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/montant"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/montant"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/desc"
                android:textColor="#090000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="#090000" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLocalisation"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:background="@android:drawable/ic_dialog_map"
        android:contentDescription="@string/Map_Key"
        android:textColor="@color/design_default_color_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnReclamation"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/btnReclamation"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/Map_Key"
        android:textColor="@color/design_default_color_background"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorPrimary"
        app:icon="@android:drawable/ic_dialog_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>